# dppd2025-workshop

./: LICENSE  README.md  pyproject.toml
data/: desirability.parquet
notebooks/: 01-neural-language-model.py  02-masked-language-modeling.py  03-text-classification.py  04-sentence-embeddings.py  05-topic-modeling.py  06-text-generation.py  07-information-extraction.py  08-fine-tuning.py  XX-span-prediction.py
